Fix bug z-index

--- a/src/WBB/CoreBundle/Resources/public/css/main.css
+++ b/src/WBB/CoreBundle/Resources/public/css/main.css
@@ -45,9 +45,10 @@
   .no-text {text-indent: -7777px; font-size: 0!important; color: transparent;}
   .font-avenir {font-family: "Avenir", sans-serif;}
   .full-white {background-color: #fff;}
+  .void-popup {z-index: 107;}
 
   /* TEMPS */
-    .mask {width: 100%; height: 100%; position: fixed; top: 0; left: 0; background-color: #000; opacity: 0.8; z-index: 77;}
+    .mask {width: 100%; height: 100%; position: fixed; top: 0; left: 0; background-color: #000; opacity: 0.8; z-index: 100;}
     .mask.brown {background-color: #4b4d4e; opacity: 1;}
     .group-form {overflow: hidden;}
     .separator-top {border-top: 1px solid #818a8c;}
@@ -169,7 +170,7 @@
   #UI .block {width: 300px;}
   #UI .btn {width: 100%; height: 60px; color: #faf3e1; font-family: "Avenir", Helvetica, Arial, sans-serif; text-transform: uppercase; text-decoration: none;}
   #UI .form-text {border: 1px solid #b3955f; line-height: 30px; height: 37px; padding: 0; width: 100%; text-indent: 10px; font-size: 17px; background-color: #faf3e1;}
-  #UI .form-submit {background-color: #b3955f; font-size: 22px;}
+  #UI .form-submit {background-color: #b3955f; font-size: 22px; font-weight: bold;}
   #UI .separator {background: url("../images/UI/separator_bg.jpg") no-repeat 0 0; height: 17px; width: 302px;}
   #UI .btn-facebook {background: url("../images/UI/icon_fb.jpg") no-repeat 20px 15px; background-color: #2960a3; font-size: 17px; text-decoration: none; line-height: 65px; text-indent: 20px;}
   #UI .btn-close {background: url("../images/UI/close.png") no-repeat 0 0; height: 40px; width: 40px; display: block; text-indent: -7777px; position: absolute; top: 30px; right: 30px;}
@@ -183,7 +184,7 @@
   #UI.mobile .btn-facebook {font-size: 32px; background-image: url("../images/UI/mobile/icon_fb.jpg"); background-position: 25px center; line-height: 130px; border-radius: 2em;}
 /* Register1 (Popup) - PSDN : PSDs/login/desktop/register1.psd & register2.psd; */
   #register {padding: 0 25px;}
-  #register.void-popup {position: fixed; left: 25%; z-index: 77;}
+  #register.void-popup {position: fixed; left: 25%;}
   #register .title {width: 55%;}
   #register #UI {width: 860px}
   #register #account {width: 300px; float: left; border-right: 1px solid #babbb4; padding: 0 50px;}
